--- a/index.html
+++ b/index.html
@@ -1,28 +1,16 @@
-
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <title>SoccerManager</title>
-    <script src="libraries/p5.js" type="text/javascript"></script>
-    <script src="libraries/p5.speech.js" type="text/javascript"></script>
-    <script src="libraries/p5.dom.js" type="text/javascript"></script>
-    <script src="libraries/p5.sound.js" type="text/javascript"></script>
-    <script src="libraries/p5.play.js" type="text/javascript"></script>
-     <script src="Game.js" type="text/javascript"></script>
-    <script src="Field.js" type="text/javascript"></script>
-    <script src="Boundary.js" type="text/javascript"></script>
-    <script src="FieldRegion.js" type="text/javascript"></script>
-    <script src="Formation.js" type="text/javascript"></script>
-    <script src="Team.js" type="text/javascript"></script>
-    <script src="Moveable.js" type="text/javascript"></script>
-    <script src="Player.js" type="text/javascript"></script>
-    <script src="Ball.js" type="text/javascript"></script>
-    <script src="sketch.js" type="text/javascript"></script>
+<head>
+  <meta charset="UTF-8">
+  <title>Simple Soccer Manager</title> 
+  <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans">
+  <link rel="stylesheet" type="text/css" href="style.css" />
+</head>
+<body>
+  <h1 id="title">Simple Soccer Manager  </h1>
+  <button><a href="game.html">START</a></button>
 
-    <style> body {padding: 0; margin: 0;} </style>
-  </head>
-  <body>
-  
-  </body>
+
+
+</body>
 </html>
